linking some basic JS, proof of website existing
I promise I'm not spending all my time on a glorified Makefile.

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Wake Up</title>
+  
+  <!-- Style -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!-- Script -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="js/main.js"></script>
+
 </head>
 <body>
-  Coming Soon.
+  <h1>
+    Coming Soon.
+  </h1>
 </body>
 </html>
