--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,31 @@
   
   <!-- Style -->
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <!-- Script -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="js/main.js"></script>
 
 </head>
 <body>
-  <h1>
-    Coming Soon.
-  </h1>
+  <article id="presentation">
+    <section>
+      <h1>Everybody Needs to Wake Up</h1>
+      <h2>A Survey of Android Alarm Clock Application Design</h2>
+    </section>
+    <section>
+      <h1>Timely | Warmly</h1>
+    </section>
+    <section>
+      <h1>Technical Differences</h1>
+    </section>
+  </article>
+
+  <!-- Script -->
+  <!-- jQuery -->
+  <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+  <!-- Bespoke -->
+  <script src="lib/bespoke.min.js"></script>
+  <script src="lib/bespoke-keys.min.js"></script>
+  <script src="lib/bespoke-touch.min.js"></script>
+  <script src="lib/bespoke-bullets.min.js"></script>
+  <!-- Wake Up -->
+  <script src="js/main.js"></script>
 </body>
 </html>
