added scale, live updating server

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
   <script src="lib/bespoke-keys.min.js"></script>
   <script src="lib/bespoke-touch.min.js"></script>
   <script src="lib/bespoke-bullets.min.js"></script>
+  <script src="lib/bespoke-scale.min.js"></script>
   <!-- Wake Up -->
   <script src="js/main.js"></script>
 </body>
