reorder things, jQuery

--- a/src/index.html
+++ b/src/index.html
@@ -21,19 +21,6 @@
 
 </head>
 <body>
-  <article id="presentation">
-    <section>
-      <h1>Everybody Needs to Wake Up</h1>
-      <h2>A Survey of Android Alarm Clock Application Design</h2>
-    </section>
-    <section>
-      <h1>Timely | Warmly</h1>
-    </section>
-    <section>
-      <h1>Technical Differences</h1>
-    </section>
-  </article>
-
   <!-- Script -->
   <!-- jQuery -->
   <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
@@ -45,5 +32,29 @@
   <script src="lib/bespoke-scale.min.js"></script>
   <!-- Wake Up -->
   <script src="js/main.js"></script>
+
+  <article id="presentation">
+
+    <section>
+      <h1>Everybody Needs to Wake Up</h1>
+      <h2>A Survey of Android Alarm Clock Application Design</h2>
+      <h3 class="mono">Kashev Dalmia</h3>
+      <h3 class="mono">A Project for ARTD 313 @ UIUC, Sp 2014</h3>
+    </section>
+
+    <section>
+      <h1>Timely | Warmly</h1>
+    </section>
+
+    <section>
+      <h1>Technical Differences</h1>
+    </section>
+
+    <section>
+      <h1>Test</h1>
+    </section>
+
+  </article>
+
 </body>
 </html>
