added small D3 Test on one slide
Looks good, will be able to use for use case diagram.

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
   <script src="lib/bespoke-touch.min.js"></script>
   <script src="lib/bespoke-bullets.min.js"></script>
   <script src="lib/bespoke-scale.min.js"></script>
+  <!-- d3 -->
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <!-- Wake Up -->
   <script src="js/main.js"></script>
 
@@ -51,7 +53,9 @@
     </section>
 
     <section>
-      <h1>Test</h1>
+      <h1>Use Case Diagrams</h1>
+      <div id="timely-use-case"></div>
+      <div id="warmly-use-case"></div>
     </section>
 
   </article>
