updating diagrams, adding slides

--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,7 @@
           <li>Users can select the sounds that plays when the alarm goes off.</li>
           <li>Users can set multiple alarms.</li>
           <li>Users can set puzzles to make sure that they wake up.</li>
+          <li>Users can sync alarms across devices.</li>
         </li>
         <li><em>Epic: </em> Users want to see the current time on their phone.
           <li>Users can display the time on a dedicated screen.</li>
@@ -182,10 +183,16 @@
       </ul>
     </section>
     
+    <!-- WARMLY USE CASE -->
     <section>
-      <h1>Use Case Diagrams</h1>
-      <div id="timely-use-case"></div>
-      <div id="warmly-use-case"></div>
+      <h1>Warmly Use Case Diagram</h1>
+      <img src="img/warmly_use_case.png" alt="Warmly Use Case Diagram">
+    </section>
+
+    <!-- TIMELY USE CASE -->
+    <section>
+      <h1>Timely Use Case Diagram</h1>
+      <img src="img/timely_use_case.png" alt="Timely Use Case Diagram">
     </section>
 
   </article>
