got the slides working the way they ought
thank the lawd. What does position: relative even mean.

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     
     <!-- WINDOWS AND MIRRORS -->
     <section>
-      <blockquote cite="Windows and Mirrors - Bolter and Gromala 68">
+      <blockquote>
         <p>good [examples of digital interaction design] oscillate between hiding and revealing themselves</p>
       </blockquote>
       <ul>
@@ -146,7 +146,7 @@
     <section>
       <h1>Timely User Stories</h1>
       <ul>
-        <li><em>Epic: </em>Users want to wake up.
+        <li><strong>Epic: </strong>Users want to wake up.
           <li>Users can set alarms.</li>
           <li>Users can set the days of the week that the alarm goes off.</li>
           <li>Users can select the sounds that plays when the alarm goes off.</li>
@@ -154,14 +154,14 @@
           <li>Users can set puzzles to make sure that they wake up.</li>
           <li>Users can sync alarms across devices.</li>
         </li>
-        <li><em>Epic: </em> Users want to see the current time on their phone.
+        <li><strong>Epic: </strong> Users want to see the current time on their phone.
           <li>Users can display the time on a dedicated screen.</li>
           <li>Users can set the screen to 'night mode', for bedside viewing.</li>
         </li>
-        <li><em>Epic: </em> Users want to set timers.
+        <li><strong>Epic: </strong> Users want to set timers.
           <li>Users can set timers on a dedicated screen.</li>
         </li>
-        <li><em>Epic: </em> Users want to have a stopwatch.
+        <li><strong>Epic: </strong> Users want to have a stopwatch.
           <li>Users can use a stopwatch with lap functionality on a dedicated screen.</li>
         </li>
       </ul>
@@ -171,14 +171,14 @@
     <section>
       <h1>Warmly User Stories</h1>
       <ul>
-        <li><em>Epic: </em>Users want to wake up.
+        <li><strong>Epic: </strong>Users want to wake up.
           <li>Users can set alarms.</li>
           <li>Users can set the days of the week that the alarm goes off.</li>
           <li>Users can select the sounds that plays when the alarm goes off.</li>
           <li>Users can see weather information on the alarm screen.</li>
           <li>Users can wake up gradually because the alarm is gradual.</li>
         </li>
-        <li><em>Epic: </em>Users want to see the current time on their phone.
+        <li><strong>Epic: </strong>Users want to see the current time on their phone.
           <li>Users can display the time on a dedicated screen.</li>
         </li>
       </ul>
