added reset, removed D3

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,12 @@
   <script src="lib/bespoke-touch.min.js"></script>
   <script src="lib/bespoke-bullets.min.js"></script>
   <script src="lib/bespoke-scale.min.js"></script>
-  <!-- d3 -->
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <!-- Wake Up -->
   <script src="js/main.js"></script>
+  
+  <div id="back" class="nav">&lt;</div>
 
+  <!-- BESPOKE EVERYTHING -->
   <article id="presentation">
     
     <!-- TITLE -->
@@ -250,6 +251,8 @@
 
       <img src="img/timely_icon.webp" alt="Timely Icon">
     </section>
+
+  <div id="forward" class="nav">&gt;</div>
 
   </article>
 
