working nav buttons
cute!

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
   <!-- Wake Up -->
   <script src="js/main.js"></script>
   
-  <div id="back" class="nav">&lt;</div>
+  <div id="back" class="nav">
+    <div class="center">&lt;</div>
+  </div>
 
   <!-- BESPOKE EVERYTHING -->
   <article id="presentation">
@@ -250,10 +252,11 @@
 
       <img src="img/timely_icon.webp" alt="Timely Icon">
     </section>
-
-  <div id="forward" class="nav">&gt;</div>
-
   </article>
+
+  <div id="forward" class="nav">
+    <div class="center">&gt;</div>
+  </div>
 
 </body>
 </html>
