--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,8 @@
     <section>
       <h1>Everybody Needs to Wake Up</h1>
 
-      <h2>A Survey of Android Alarm Clock Application Design</h2>
+      <h2>a survey of android alarm clock application design</h2>
+      <br><br>
       <h3 class="mono">Kashev Dalmia</h3>
       <h3 class="mono">A Project for ARTD 313 @ UIUC, Sp 2014</h3>
     </section>
@@ -52,7 +53,7 @@
     <!-- WINDOWS AND MIRRORS -->
     <section>
       <blockquote>
-        <p>good [examples of digital interaction design] oscillate between hiding and revealing themselves</p>
+        good [examples of digital interaction design] oscillate between hiding and revealing themselves
       </blockquote>
       <ul>
         <li>Good design shows itself, and makes a strong first impression.</li>
