slides are a bad idea right now.

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
   <script src="lib/bespoke-keys.min.js"></script>
   <script src="lib/bespoke-touch.min.js"></script>
   <script src="lib/bespoke-bullets.min.js"></script>
-  <!-- Glide -->
-  <script src="js/jquery.glide.min.js"></script>
+  <!-- Slides -->
+  <script src="js/jquery.slides.min.js"></script>
   <!-- Wake Up -->
   <script src="js/main.js"></script>
   
@@ -84,16 +84,13 @@
       <h1>The Timely Approach</h1>
       <div class="grid">
         <div class="third">
-          <div class="slider">
-            <ul class="slides">
-              <li class="slide"><img src="img/timely_icon.webp" alt="Timely Icon"></li>
-              <li class="slide"><img src="img/timely1.png" alt="Timely - Slide an Alarm"></li>
-              <li class="slide"><img src="img/timely2.png" alt="Timely - Set an Alarm"></li>
-              <li class="slide"><img src="img/timely3.png" alt="Timely - Configure an Alarm"></li>
-              <li class="slide"><img src="img/timely4.png" alt="Timely - View the Time"></li>
-              <li class="slide"><img src="img/timely5.png" alt="Timely - Time Something"></li>
-              <li class="slide"><img src="img/timely6.png" alt="Timely - Stopwatch"></li>
-            </ul>
+            <img src="img/timely_icon.webp" alt="Timely Icon">
+            <img src="img/timely1.png" alt="Timely - Slide an Alarm">
+            <img src="img/timely2.png" alt="Timely - Set an Alarm">
+            <img src="img/timely3.png" alt="Timely - Configure an Alarm">
+            <img src="img/timely4.png" alt="Timely - View the Time">
+            <img src="img/timely5.png" alt="Timely - Time Something">
+            <img src="img/timely6.png" alt="Timely - Stopwatch">
           </div>
         </div>
 
