cleaning up, setting proper image height

--- a/src/index.html
+++ b/src/index.html
@@ -280,13 +280,13 @@
     <!-- TIMELY USE CASE -->
     <section>
       <h1>Timely Use Case Diagram</h1>
-      <img src="img/timely_use_case.png" alt="Timely Use Case Diagram">
+      <img src="img/timely_use_case.png" alt="Timely Use Case Diagram" style="height:80%">
     </section>
 
     <!-- WARMLY USE CASE -->
     <section>
       <h1>Warmly Use Case Diagram</h1>
-      <img src="img/warmly_use_case.png" alt="Warmly Use Case Diagram">
+      <img src="img/warmly_use_case.png" alt="Warmly Use Case Diagram" style="height:80%">
     </section>
 
     <!-- TRANSITION -->
