--- a/src/index.html
+++ b/src/index.html
@@ -291,51 +291,69 @@
 
     <!-- TRANSITION -->
     <section>
-      <div class="transition">...but what about Eric and Becky?</div>
+      <h1>...but what about Eric and Becky?</h1>
     </section>
 
     <!-- ERIC -->
     <section>
-      <h1>Eric</h1>
-      <h2>Reasons Eric Might Use Timely</h2>
-      <ul>
-        <li>He is a heavy sleeper. The alarm is loud, which wakes him up, the snooze is configurable to be shorter with every snooze, and there are puzzles to make sure he's functioning and not just going through the motions.</li>
-        <li>He needs to time himself. Timely has a timer feature that allows him to make sure he's getting through his morning ablutions quickly.</li>
-        <li>He has class at different times on different days. Timely allows him to set separate alarms with separate repeating patterns. He can even select different sounds.</li>
-        <li>The interface is intuitive. He grew up in the computer age, so after a quick tutorial, setting alarms is effortless.</li>
-      </ul>
-      <h2>Reasons Eric Might Use Warmly</h2>
-      <ul>
-        <li>He doesn't like to be jarred awake. Warmly's natural alarm sounds, which build in volume by design, allow Eric to wake up over the course of 5 minutes or so, rather than all at once.</li>
-        <li>He misses home. Warmly's breakfast sounds remind him of his mother's bacon!</li>
-        <li>He wants simple. Eric might not want to spend all of his time setting alarms, trying to make sure he can sleep until the absolute last possible minute. He just wants to wake up every day, and Warmly allows him to easily set a single, recurring alarm.</li>
-      </ul>
+      <h2>Eric</h2>
+      <div class="grid">
+        <div class="half">
+          <h3>Why Timely?</h3>
+          <ul class="small">
+            <li>He is a heavy sleeper. The alarm is loud, which wakes him up, the snooze is configurable to be shorter with every snooze, and there are puzzles to make sure he's functioning and not just going through the motions.</li>
+            <li>He needs to time himself. Timely has a timer feature that allows him to make sure he's getting through his morning ablutions quickly.</li>
+            <li>He has class at different times on different days. Timely allows him to set separate alarms with separate repeating patterns. He can even select different sounds.</li>
+            <li>The interface is intuitive. He grew up in the computer age, so after a quick tutorial, setting alarms is effortless.</li>
+          </ul>
+        </div>
+        <div class="half">
+          <h3>Why Warmly?</h3>
+          <ul class="small">
+            <li>He doesn't like to be jarred awake. Warmly's natural alarm sounds, which build in volume by design, allow Eric to wake up over the course of 5 minutes or so, rather than all at once.</li>
+            <li>He misses home. Warmly's breakfast sounds remind him of his mother's bacon!</li>
+            <li>He wants simple. Eric might not want to spend all of his time setting alarms, trying to make sure he can sleep until the absolute last possible minute. He just wants to wake up every day, and Warmly allows him to easily set a single, recurring alarm.</li>
+          </ul>
+        </div>
+      </div>
     </section>
     
     <!-- BECKY -->
     <section>
-      <h1>Becky</h1>
-      <h2>Reasons Becky Might Use Timely</h2>
-      <ul>
-        <li>It reminds her of her husband's iPhone. Which is very pretty.</li>
-        <li>She need to remind herself to do things during the day. Because she can name alarms in Timely, she can use alarms to remind herself to attend her meetings, even when she's not looking at her Outlook calendar. She can even use multiple alarms to remind her when she needs to pick up her daughter from dance class.</li>
-        <li>She needs to have a convenient timer for both her baking and her pomodoro time management. Timely has a robust timer that is easy to set one handed.</li>
-      </ul>
-      <h2>Reasons Becky Might Use Warmly</h2>
-      <ul>
-        <li>She doesn't really know her way around her phone yet. Unlike Timely, Warmly is pretty obvious to navigate, and doesn't require a tutorial.</li>
-        <li>She doesn't want to wake her husband sleeping when she wakes up. Warmly's gentle sounds wake her up, but don't affect her husband's slumber.</li>
-        <li>She wants a bed time clock to replace her old alarm clock. After she's set her Warmly alarm, the dark clock on the dark screen displayed is perfect for propping up on her nightstand while she charges her phone at night.</li>
-        <li>She wants to know the weather so she can know how to dress herself. Warmly's alarm screen displays weather information based on current location.</li>
-      </ul>
+      <h2>Becky</h2>
+      <div class="grid">
+        <div class="half">
+          <h3>Why Timely?</h3>
+          <ul class="small">
+            <li>It reminds her of her husband's iPhone. Which is very pretty.</li>
+            <li>She need to remind herself to do things during the day. Because she can name alarms in Timely, she can use alarms to remind herself to attend her meetings, even when she's not looking at her Outlook calendar. She can even use multiple alarms to remind her when she needs to pick up her daughter from dance class.</li>
+            <li>She needs to have a convenient timer for both her baking and her pomodoro time management. Timely has a robust timer that is easy to set one handed.</li>
+          </ul>
+        </div>
+        <div class="half">
+          <h3>Why Warmly></h3>
+          <ul class="small">
+            <li>She doesn't really know her way around her phone yet. Unlike Timely, Warmly is pretty obvious to navigate, and doesn't require a tutorial.</li>
+            <li>She doesn't want to wake her husband sleeping when she wakes up. Warmly's gentle sounds wake her up, but don't affect her husband's slumber.</li>
+            <li>She wants a bed time clock to replace her old alarm clock. After she's set her Warmly alarm, the dark clock on the dark screen displayed is perfect for propping up on her nightstand while she charges her phone at night.</li>
+            <li>She wants to know the weather so she can know how to dress herself. Warmly's alarm screen displays weather information based on current location.</li>
+          </ul>
+        </div>
+      </div>
     </section>
     
     <!-- WINNER -->
     <section>
       <h1>A Clear Winner?</h1>
-      <p>Everyone has different taste, and taste can't be easily accounted for. However, unless you really, really want to wake up the sound of frying bacon, I have no trouble recommending Timely as the Android alarm clock app you should install. Despite being more complex than Warmly, it is suitably easy to learn, and makes waking up easier.</p>
+      <div class="grid">
+        <div class="third">
+          <img src="img/timely_icon.webp" alt="Timely Icon">
+        </div>
+        <div class="two-thirds">
+          <p>Everyone has different taste, and taste can't be easily accounted for. However, unless you really, really want to wake up the sound of frying bacon, I have no trouble recommending Timely as the Android alarm clock app you should install. Despite being more complex than Warmly, it is suitably easy to learn, and makes waking up easier.</p>
+        </div>
+      </div>
 
-      <img src="img/timely_icon.webp" alt="Timely Icon">
     </section>
   </article>
 
