fix readme, typo

--- a/src/index.html
+++ b/src/index.html
@@ -331,7 +331,7 @@
           </ul>
         </div>
         <div class="half">
-          <h3>Why Warmly></h3>
+          <h3>Why Warmly?</h3>
           <ul class="small">
             <li>She doesn't really know her way around her phone yet. Unlike Timely, Warmly is pretty obvious to navigate, and doesn't require a tutorial.</li>
             <li>She doesn't want to wake her husband sleeping when she wakes up. Warmly's gentle sounds wake her up, but don't affect her husband's slumber.</li>
