--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,7 @@
 <body>
   <!-- Script -->
   <!-- jQuery -->
-  <!--<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> -->
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
   <!-- Bespoke -->
   <script src="lib/bespoke.min.js"></script>
   <script src="lib/bespoke-keys.min.js"></script>
@@ -37,6 +36,8 @@
   <!-- Wake Up -->
   <script src="js/main.js"></script>
   
+  <!-- BEGIN CONTENT -->
+
   <div id="back" class="nav">
     <div class="center">&lt;</div>
   </div>
